# Calculator

./: .gitignore  CMakeLists.txt  dictionary.cpp  dictionary.h  main.cpp  stack.cpp
